# swarmsim

./: .projectile  LICENSE  shell.nix  stack.yaml  swarmsim.cabal
lib/: Mailbox.hs  SwarmSim.hs
src/: Main.hs
