name:                swarmsim
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/badi/swarmsim#readme
license:             BSD3
license-file:        LICENSE
author:              Badi Abdul-Wahid
maintainer:          abdulwahidc@gmail.com
copyright:           Badi Abdul-Wahid
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: lib
  exposed-modules: SwarmSim
  build-depends: base >= 4.7 && < 5
               , vector
               , unagi-chan
               , async
               , lifted-async
               , mtl
               , io-streams
               , bytestring
               , text
               , gloss
               , linear
               , lens
  default-language: Haskell2010
  ghc-options: -funbox-strict-fields -w

executable swarmsim
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , swarmsim
  ghc-options:         -Wall -threaded -w